--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<h>This is the start of Brian H. Zhang's Real Personal Website!</h>
-<h3>The beginning of something wonderful.</h3>
+<h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
+<h>The beginning of something wonderful.</h>
