--- a/index.html
+++ b/index.html
@@ -1,2 +1,4 @@
-<h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
-<h>The beginning of something wonderful.</h>
+<div class="text-vertical-center">
+  <h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
+  <h>The beginning of something wonderful.</h>
+</div>
