--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<div class="text-vertical-center">
-  <h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
-  <h>The beginning of something wonderful.</h>
-</div>
+<header id="top" class="header">
+  <div class="text-vertical-center">
+    <h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
+    <h>The beginning of something wonderful.</h>
+  </div>
+</header>
