--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
+  
 <header id="top" class="header">
   <div class="text-vertical-center">
     <h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
