--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="stylesheet" href="bhz-website.css">
-</head>
-  
-<header id="top" class="header">
+  <head>
+    <link rel="stylesheet" href="bhz-website.css">
+  </head>
+    
   <div class="text-vertical-center">
     <h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
     <h>The beginning of something wonderful.</h>
   </div>
-</header>
+</html>
