--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" href="bhz-website.css">
-  </head>
-    
-  <div class="text-vertical-center">
-    <h3>This is the start of Brian H. Zhang's Real Personal Website!</h3>
-    <h>The beginning of something wonderful.</h>
-  </div>
+<head>
+  <title>Brian Zhang - Mechatronics Engineer</title>
+  <link rel="stylesheet" href="bhz-website.css">
+</head>
+
+<body>
+
+<div class="banner">
+  
+</div>
+  
+</body>
 </html>
