--- a/index.html
+++ b/index.html
@@ -6,9 +6,16 @@
 
 <body>
 
-<div class="banner">
-  
-</div>
+  <div class="banner">
+    <div class="navbar">
+      <ul> 
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About Me</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contacts</a></li>
+      </ul>
+    
+  </div>
   
 </body>
 </html>
