--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="#">Projects</a></li>
         <li><a href="#">Contacts</a></li>
       </ul>
-    
+    </div>
   </div>
   
 </body>
